# Stack-Overflow-Search-Engine

./: .gitignore  CMakeLists.txt  MyProject  README.md  StackSurfer  express.sh
Libraries/: bcrypt 2
Libraries/Lib/: libbson-1.0.dylib  libbsoncxx.3.10.1.dylib  libbsoncxx._noabi.dylib  libbsoncxx.dylib  libmongoc-1.0.0.0.0.dylib  libmongoc-1.0.0.dylib  libmongoc-1.0.dylib  libmongocxx.3.10.1.dylib  libmongocxx._noabi.dylib  libmongocxx.dylib
Libraries/bcrypt/1.1/: INSTALL_RECEIPT.json  sbom.spdx.json
Libraries/bcrypt/1.1/.brew/: bcrypt.rb
Libraries/cmake/3.29.3/: INSTALL_RECEIPT.json  sbom.spdx.json
Libraries/cmake/3.29.3/.brew/: cmake.rb
Libraries/curl/8.8.0/: INSTALL_RECEIPT.json  sbom.spdx.json
Libraries/curl/8.8.0/.brew/: curl.rb
Libraries/curl/8.8.0/lib/pkgconfig/: libcurl.pc
Libraries/curl/8.8.0/share/fish/vendor_completions.d/: curl.fish
Libraries/curl/8.8.0/share/man/man1/: curl.1
Libraries/curl/8.8.0/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PRIVATE.3  CURLINFO_PROTOCOL.3  CURLINFO_PROXYAUTH_AVAIL.3  CURLINFO_PROXY_ERROR.3  (+458 more)
Libraries/mongo-c-driver/1.27.1/: INSTALL_RECEIPT.json  sbom.spdx.json
Libraries/mongo-c-driver/1.27.1/.brew/: mongo-c-driver.rb
Libraries/mongo-c-driver/1.27.1/include/libmongoc-1.0/mongoc/: mongoc-config.h
Libraries/mongo-c-driver/1.27.1/lib/: libbson-1.0.0.0.0.dylib  libmongoc-1.0.0.0.0.dylib
Libraries/mongo-c-driver/1.27.1/lib/cmake/bson-1.0/: bson-targets.cmake  bson_shared-targets-release.cmake
Libraries/mongo-c-driver/1.27.1/lib/cmake/libbson-1.0/: libbson-1.0-config-version.cmake  libbson-1.0-config.cmake
Libraries/mongo-c-driver/1.27.1/lib/cmake/libbson-static-1.0/: libbson-static-1.0-config.cmake
Libraries/mongo-c-driver/1.27.1/lib/cmake/libmongoc-1.0/: libmongoc-1.0-config.cmake
Libraries/mongo-c-driver/1.27.1/lib/cmake/libmongoc-static-1.0/: libmongoc-static-1.0-config.cmake
Libraries/mongo-c-driver/1.27.1/lib/cmake/mongoc-1.0/: mongoc-1.0-config.cmake  mongoc-targets-release.cmake  mongoc-targets.cmake
Libraries/mongo-c-driver/1.27.1/lib/pkgconfig/: libbson-1.0.pc  libbson-static-1.0.pc  libmongoc-1.0.pc  libmongoc-ssl-1.0.pc  libmongoc-static-1.0.pc
Libraries/mongo-c-driver/1.27.1/share/mongo-c-driver/: uninstall.sh
Libraries/mongo-cxx-driver/3.10.1/: INSTALL_RECEIPT.json  sbom.spdx.json
Libraries/mongo-cxx-driver/3.10.1/.brew/: mongo-cxx-driver.rb
Libraries/mongo-cxx-driver/3.10.1/lib/: libbsoncxx.3.10.1.dylib  libbsoncxx._noabi.dylib  libmongocxx.3.10.1.dylib  libmongocxx._noabi.dylib
Libraries/mongo-cxx-driver/3.10.1/lib/cmake/bsoncxx-3.10.1/: bsoncxx_targets-release.cmake  bsoncxx_targets.cmake
Libraries/mongo-cxx-driver/3.10.1/lib/cmake/mongocxx-3.10.1/: mongocxx_targets-release.cmake  mongocxx_targets.cmake
Libraries/mongo-cxx-driver/3.10.1/lib/pkgconfig/: libbsoncxx.pc  libmongocxx.pc
Libraries/mongo-cxx-driver/3.10.1/share/mongo-cxx-driver/: uninstall.sh
Libraries/mongosh/2.2.6/: INSTALL_RECEIPT.json  sbom.spdx.json
Libraries/mongosh/2.2.6/.brew/: mongosh.rb
include/: authentication.hpp
src/: CMakeCache.txt  Makefile  MyProject  authentication.cpp  cmake_install.cmake  main  main.cpp
